Added profile infomation to the profile page [tab]

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -5,5 +5,28 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <img src="assets/imgs/profile.jpg" alt="Profile picture" class="profile-picture">
+      </ion-col>
+    </ion-row>
+    <h1>Roberto Lluberes</h1>
 
+    <ion-list>
+      <ion-list-header>
+        Contacto
+      </ion-list-header>
+
+      <ion-item>
+        <ion-icon name='call' item-start></ion-icon>
+        <a href="tel:8095550000">(809) 555-0000</a>
+      </ion-item>
+
+      <ion-item>
+        <ion-icon name='mail' item-start></ion-icon>
+        <a href="mailto:correo@ejemplo.com">correo@ejemplo.com</a>
+      </ion-item>
+    </ion-list>
+  </ion-grid>
 </ion-content>
