Added information about the application and the course.

--- a/src/pages/information/information.html
+++ b/src/pages/information/information.html
@@ -7,5 +7,28 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-header>
+      Información del proyecto
+    </ion-card-header>
+    <ion-card-content>
+      <p> En esta primera asignación se busca conocer el proceso de instalación de Ionic y sus depencias o requisitos de instalación,
+        así como conocer la estructura básica de un proyecto y sus compnentes.
+      </p>
+    </ion-card-content>
+  </ion-card>
 
+  <ion-card>
+
+    <ion-card-header>
+      Diplomado
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>
+        Diplomado Aplicaciones Móviles (iOS), parte del programa "Beca República Digital Diplomado" del Ministerio de Educación Superior,
+        Ciencia y Tecnología (MESCYT), impartido en la Universidad APEC por el profesor Amadis Suarez Genao.
+      </p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
