Added image profile in assets folder and fixed preview app in README

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,7 +8,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <img src="assets/imgs/profile.jpg" alt="Profile picture" class="profile-picture">
+        <img src="../../assets/imgs/profile.jpg" alt="Profile picture" class="profile-picture">
       </ion-col>
     </ion-row>
     <h1>Roberto Lluberes</h1>
